Added basic Command for Buying Stock

--- a/src/lang/english_US.txt
+++ b/src/lang/english_US.txt
@@ -5080,7 +5080,9 @@ STR_ERROR_CAN_T_REPAY_LOAN                                      :{WHITE}Can't re
 STR_ERROR_INSUFFICIENT_FUNDS                                    :{WHITE}Can't give away money that is loaned from the bank...
 STR_ERROR_CAN_T_GIVE_MONEY                                      :{WHITE}Can't give away money to this company...
 STR_ERROR_CAN_T_BUY_COMPANY                                     :{WHITE}Can't buy company...
-STR_ERROR_CAN_T_BUILD_COMPANY_HEADQUARTERS                      :{WHITE}Can't build company headquarters...
+STR_ERROR_CAN_T_BUY_COMPANY_OWNERSHIP                           :{WHITE} Can't own anymore of this company...
+STR_ERROR_MAXIMUM_COMPANY_OWNERSHIP                             :{WHITE} Can't own anymore of this company...
+STR_ERROR_MINIMUM_COMPANY_OWNERSHIP                             :{WHITE} Can't sell anymore of this company...
 
 # Town related errors
 STR_ERROR_CAN_T_GENERATE_TOWN                                   :{WHITE}Can't build any towns...
