Added basic Merging Functionality

--- a/src/lang/english_AU.txt
+++ b/src/lang/english_AU.txt
@@ -4008,6 +4008,7 @@ STR_COMPANY_OWNERSHIP_VIEW_COMPANY                              :{WHITE}{STRING}
 STR_COMPANY_OWNERSHIP_VALUE                                     :{YELLOW}{NUM}
 STR_COMPANY_OWNERSHIP_BUY                                       :{WHITE}Buy 10%
 STR_COMPANY_OWNERSHIP_SELL                                      :{WHITE}Sell 10%
+STR_COMPANY_OWNERSHIP_MERGE                                     :{WHITE}Merge
 
 
 STR_COMPANY_VIEW_NEW_FACE_BUTTON                                :{BLACK}New Face
@@ -5085,6 +5086,8 @@ STR_ERROR_CAN_T_BUILD_COMPANY_HEADQUARTERS                      :{WHITE}Can't bu
 STR_ERROR_CAN_T_BUY_COMPANY_OWNERSHIP                           :{WHITE} Can't own anymore of this company...
 STR_ERROR_MAXIMUM_COMPANY_OWNERSHIP                             :{WHITE} Can't own anymore of this company...
 STR_ERROR_MINIMUM_COMPANY_OWNERSHIP                             :{WHITE} Can't sell anymore of this company...
+STR_ERROR_NOT_ENOUGH_COMPANY_OWNERSHIP                          :{WHITE} Not enough ownership...
+STR_ERROR_SAME_COMPANY_OWNERSHIP_MERGE                          :{WHITE} Can't merge same company...
 
 # Town related errors
 STR_ERROR_CAN_T_GENERATE_TOWN                                   :{WHITE}Can't build any towns...
