Fixed Dividends and based it quarterly on 5% of their current stock value. Also added the records to the finance screen to improve money spent and money gained visibility. Also, started paying money to the company that is getting stock taken from them.

--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -3949,6 +3949,7 @@ STR_FINANCES_SECTION_TRAIN_REVENUE                              :{GOLD}Trains
 STR_FINANCES_SECTION_ROAD_VEHICLE_REVENUE                       :{GOLD}Road Vehicles
 STR_FINANCES_SECTION_AIRCRAFT_REVENUE                           :{GOLD}Aircraft
 STR_FINANCES_SECTION_SHIP_REVENUE                               :{GOLD}Ships
+STR_FINANCES_SECTION_DIVIDEND_REVENUE                           :{GOLD}Dividend Income
 STR_FINANCES_SECTION_LOAN_INTEREST                              :{GOLD}Loan Interest
 STR_FINANCES_SECTION_DIVIDEND_PAYOUT                            :{GOLD}Dividend Payout
 STR_FINANCES_SECTION_OTHER                                      :{GOLD}Other
