--- a/src/lang/english_AU.txt
+++ b/src/lang/english_AU.txt
@@ -3982,6 +3982,7 @@ STR_COMPANY_VIEW_SHIPS                                          :{WHITE}{COMMA} 
 STR_COMPANY_VIEW_VEHICLES_NONE                                  :{WHITE}None
 STR_COMPANY_VIEW_COMPANY_VALUE                                  :{GOLD}Company value: {WHITE}{CURRENCY_LONG}
 STR_COMPANY_VIEW_COMPANY_STOCK_VALUE                            :{GOLD}Company stock value: {WHITE}{CURRENCY_LONG}
+STR_COMPANY_VIEW_COMPANY_STOCK_CONFIDENCE                       :{GOLD}Company stock holder confidence: {WHITE}{NUM}%
 STR_COMPANY_VIEW_INFRASTRUCTURE                                 :{GOLD}Infrastructure:
 STR_COMPANY_VIEW_INFRASTRUCTURE_RAIL                            :{WHITE}{COMMA} rail piece{P "" s}
 STR_COMPANY_VIEW_INFRASTRUCTURE_ROAD                            :{WHITE}{COMMA} road piece{P "" s}
